fixed comment text overflow

--- a/src/assets/scss/_comments.scss
+++ b/src/assets/scss/_comments.scss
@@ -24,5 +24,9 @@
   }
   &-body {
     line-height: 1.5;
+    hyphens: auto;
+  }
+  &-content {
+    overflow: hidden;
   }
 }
