--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -34,6 +34,7 @@
       gap: 2rem;
       padding: 1.4rem;
       color: $text-light;
+      max-width: 100vw;
     }
     &-body {
       font-size: 1.6rem;
